[gd_scene load_steps=13 format=3 uid="uid://uyf2xv345f10"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3ih0l"]
[ext_resource type="AudioStream" uid="uid://d2d5vwfjxrhic" path="res://assets/audio/music/4.ogg" id="2_15ktm"]
[ext_resource type="Texture2D" uid="uid://daakoqoug8tly" path="res://assets/destroyed_city_background1.png" id="4_71udx"]
[ext_resource type="Texture2D" uid="uid://de15blxjgtt8w" path="res://assets/ui/title.png" id="4_seej8"]
[ext_resource type="Texture2D" uid="uid://b1iw4xeonbkc0" path="res://assets/destroyed_city_background2.png" id="5_pp4yy"]

[sub_resource type="Animation" id="Animation_wsd7x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="Animation" id="Animation_1doey"]
resource_name = "moving_title"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0349066, 0.0349066]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqvf1"]
_data = {
"RESET": SubResource("Animation_wsd7x"),
"moving_title": SubResource("Animation_1doey")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_bild0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_71udx")
}, {
"duration": 1.0,
"texture": ExtResource("5_pp4yy")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Gradient" id="Gradient_65oio"]
colors = PackedColorArray(0.454653, 0.2184, 0.52, 1, 0.626667, 0, 0.8, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5vb46"]
frequency = 0.0053
offset = Vector3(-714.29, 0, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jar63"]
width = 2000
height = 2000
color_ramp = SubResource("Gradient_65oio")
noise = SubResource("FastNoiseLite_5vb46")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ih0l")

[node name="options_menu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 445.0
offset_top = 459.0
offset_right = 783.0
offset_bottom = 594.0

[node name="musicvolume" type="Label" parent="options_menu"]
layout_mode = 2
text = "Music volume"
horizontal_alignment = 1

[node name="musicVolume" type="HSlider" parent="options_menu"]
layout_mode = 2
min_value = -40.0
max_value = 40.0

[node name="effects volume" type="Label" parent="options_menu"]
layout_mode = 2
text = "Effects volume"
horizontal_alignment = 1

[node name="sound_effects_volume" type="HSlider" parent="options_menu"]
layout_mode = 2
min_value = -50.0
max_value = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 447.0
offset_right = 400.0
offset_bottom = 609.0
theme_override_constants/separation = 10

[node name="play_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"

[node name="howtoplay" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "HOW TO PLAY"

[node name="options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "OPTIONS"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "EXIT"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_15ktm")
volume_db = -30.0
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Title" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 161.0
offset_top = 83.0
offset_right = 961.0
offset_bottom = 383.0
pivot_offset = Vector2(400, 200)
texture = ExtResource("4_seej8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kqvf1")
}
autoplay = "moving_title"

[node name="background" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(578, 336)
sprite_frames = SubResource("SpriteFrames_bild0")
frame_progress = 0.60241

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
layout_mode = 0
offset_left = 914.0
offset_top = 597.0
offset_right = 1084.0
offset_bottom = 628.0
text = "Neuro control"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -10
layout_mode = 0
offset_left = -469.0
offset_top = -669.0
offset_right = 1531.0
offset_bottom = 1331.0
rotation = 6.28319
pivot_offset = Vector2(1000, 1000)
mouse_filter = 2
texture = SubResource("NoiseTexture2D_jar63")

[connection signal="value_changed" from="options_menu/musicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="options_menu/sound_effects_volume" to="." method="_on_sound_effects_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/options_button" to="." method="_on_options_button_toggled"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
